--- a/main.html
+++ b/main.html
@@ -8,6 +8,85 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="grid1">
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+	</div>
+<br>
+	<div id="grid2">
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+	</div>
+<br>
+	<div id="grid3">
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+	<br>
+	</div id="grid4">
+		<div class="gird1-item">
+			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
+	<div>
+		
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
