--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<div class="fluid" >
 	<div id="grid1">
 		<div class="gird1-item">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
@@ -83,9 +84,7 @@
 		<div class="gird1-item">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-	<div>
-		
-	</div>
+</div>
 	
     <script type="text/javascript" src="./script.js">
 </script>
