--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<div class="fluid" >
+<div class="contianer-fluid" >
 	<div id="grid1">
 		<div class="gird1-item">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
@@ -80,10 +80,11 @@
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
 	<br>
-	</div id="grid4">
+	</div>
+	<div id="grid4">
 		<div class="gird1-item">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
-		</div>
+	</div>
 </div>
 	
     <script type="text/javascript" src="./script.js">
