--- a/main.html
+++ b/main.html
@@ -47,7 +47,6 @@
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
 	</div>
-<br>
 	<div id="grid2">
 		<div class="gird1-item">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
@@ -68,7 +67,6 @@
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
 	</div>
-<br>
 	<div id="grid3">
 		<div class="gird1-item">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
@@ -84,9 +82,9 @@
 	<div id="grid4">
 		<div class="gird1-item">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
+		</div>
 	</div>
 </div>
-	
     <script type="text/javascript" src="./script.js">
 </script>
 
