--- a/main.html
+++ b/main.html
@@ -10,77 +10,77 @@
 	<!-- the entire body must be written by student -->
 <div class="container-fluid" >
 	<div id="grid1">
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-1">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
 	</div>
 	<div id="grid2">
-		<div class="gird1-item">
+		<div class="col-sm-2">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-2">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-2">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-2">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-2">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-2">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
 	</div>
 	<div id="grid3">
-		<div class="gird1-item">
+		<div class="col-sm-4">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-4">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
-		<div class="gird1-item">
+		<div class="col-sm-4">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
 	<br>
 	</div>
 	<div id="grid4">
-		<div class="gird1-item">
+		<div class="col-sm-12">
 			<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" />
 		</div>
 	</div>
